--- a/catalog.pug
+++ b/catalog.pug
@@ -10,7 +10,7 @@ html(lang="ru")
       .container
         .top-row
           .logo-top
-            a(href="")
+            a(href="index.html")
               img(src="img/logo-technomart.svg", alt="logo")
           .search
             form(action="search.html" method="get")
@@ -20,13 +20,13 @@ html(lang="ru")
                   path(fill="#ffffff" d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z")
           .bookmarks
             .bookmark-icon
-            a(href="") Закладки:
+            a(href="") закладки:
             span 0
           .cart
             .cart-icon
-            a(href="") Корзина:
+            a(href="") корзина:
             span 10
-          a.order(href="") Оформить заказ
+          a.order(href="") оформить заказ
         .middle-row
           .slogan
             h2.visually-hidden главные данные
@@ -118,14 +118,14 @@ html(lang="ru")
             p.sort-to сортировка:
             ul.sort-list
               li.sort-to-price
-                a(href="") по цене
+                a.active(href="") по цене
               li.sort-to-type
                 a(href="") по типу
               li.sort-to-functional
                 a(href="") по функионалу
             ul.arrows
               li.arrow-item
-                a.arrow(href="" aria-label="up")
+                a.arrow.active(href="" aria-label="up")
                   svg(xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10")
                     path(fill="#231F20" d="M5.5 0L0 10h11z")
               li.arrow-item
@@ -210,13 +210,6 @@ html(lang="ru")
               button(type="submit") в закладки
             h3.title Перфоратор BOSCH BFG 2000
             p.price 12500 Р.
-          .good-in-cart.visually-hidden
-            .icon-mark
-            p Товар добавлен в корзину!
-            .close
-            .order-buy
-              a.btn(href="") оформить заказ
-              button(type="submit") продолжить покупки
           .pager
             ul.pager-list
               li.pager-item
@@ -272,3 +265,10 @@ html(lang="ru")
           a(href="mailto:mail@htmlacademy.ru") mail@htmlacademy.ru
           p Разработано
           a(href="https://htmlacademy.ru/intensive/htmlcss" target="_blank") htmlacademy.ru
+    .cart-popup
+      .icon-mark
+      p Товар добавлен в корзину!
+      .close
+      .order-buy
+        a.btn(href="") оформить заказ
+        button(type="submit") продолжить покупки
