--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ html {
 }
 *,
 *::before,
-* ::after {
+*::after {
   box-sizing: inherit;
 }
 @font-face {
@@ -37,9 +37,18 @@ html {
   font-weight: 400;
 }
 .page {
-  margin: 0 auto;
   font: 14px "Cuprum";
   line-height: 18px;
+}
+.page,
+p,
+h1 {
+  margin: 0 auto;
+}
+.container {
+  width: 960px;
+  margin: 0 auto;
+  padding: 0 10px;
 }
 .visually-hidden {
   position: absolute;
@@ -62,14 +71,15 @@ html {
   background-color: #ba2732;
 }
 .page-header {
-  background-color: #f3f7f9;
+  background: linear-gradient(to bottom, #293449 42px, #f3f7f9 42px);
 }
 .top-row {
-  background-color: #293449;
   font-size: 17px;
   text-transform: capitalize;
 }
 .logo-top {
+  display: inline-block;
+  vertical-align: top;
   box-shadow: inset 0 -5px 0 rgba(0,0,0,0.24);
   background-color: #ee3643;
 }
@@ -79,12 +89,26 @@ html {
 .logo-top:active {
   background-color: #ba2732;
 }
+.logo-top img {
+  padding: 11px 55px;
+}
 a {
   color: #fff;
   text-decoration: none;
 }
+.search {
+  display: inline-block;
+  vertical-align: top;
+  width: 270px;
+}
 .search:hover {
   background-color: #212a3a;
+}
+.bookmarks,
+.cart {
+  display: inline-block;
+  vertical-align: top;
+  width: 150px;
 }
 .bookmarks:hover,
 .cart:hover {
@@ -109,6 +133,7 @@ a {
   opacity: 0.3;
 }
 .order {
+  width: 150px;
   background-color: #63a63e;
 }
 .order:hover {
@@ -117,30 +142,50 @@ a {
 .order:active {
   background-color: #518534;
 }
+.middle-row {
+  padding: 41px 0 44px;
+}
+.slogan,
+.address,
+.authorization {
+  display: inline-block;
+  vertical-align: top;
+}
 .slogan {
+  width: 196px;
   color: #ee3643;
-  font: 25px "Cuprum-Italic";
+  font: 16px "Cuprum-Italic";
   line-height: 23px;
-}
-.phone-number {
-  border: 3px solid #fff;
-}
-.phone {
-  background-image: url("../img/icon-phone.svg");
-}
-.number {
-  color: #ee3643;
-  line-height: 21px;
-  font-size: 21px;
+  margin: 8px 71px 0 44px;
 }
 .address p {
   color: #32425c;
   line-height: 24px;
+  margin: 0 10px;
 }
-/* catalog style start */
+.phone-number {
+  border: 3px solid #fff;
+  padding: 13px 52px 11px 15px;
+}
+.phone {
+  display: inline-block;
+  vertical-align: top;
+  margin-right: 40px;
+  background-image: url("../img/icon-phone.svg");
+  width: 19px;
+  height: 19px;
+}
+.number {
+  display: inline-block;
+  vertical-align: top;
+  color: #ee3643;
+  line-height: 21px;
+  font-size: 21px;
+}
 .authorization {
   font: 21px "Cuprum";
   line-height: 21px;
+  margin: 14px 0 0 69px;
 }
 .authorization a {
   color: #000;
@@ -153,13 +198,21 @@ a {
   opacity: 0.3;
   color: #000;
 }
+.enter {
+  margin-right: 10px;
+  padding: 14px 27px 14px 14px;
+}
 .enter path:hover {
   fill: #32425c;
+}
+.registration {
+  padding: 14px 25px 14px;
 }
 .customer path:hover,
 .logout path:hover {
   fill: #32425c;
 }
+/* catalog style start */
 .personal-item:first-child {
   list-style: none;
 }
@@ -177,6 +230,7 @@ a {
 }
 /* catalog style end */
 .navigation {
+  min-height: 60px;
   box-shadow: inset 0 -5px 0 #293449;
   background-color: #32425c;
   font-size: 17px;
@@ -186,8 +240,15 @@ a {
   color: #fff;
   text-decoration: none;
 }
+.navigation-list {
+  display: flex;
+  margin: 0 auto;
+}
 .navigation-item {
+  flex-grow: 1;
+  text-align: center;
   list-style: none;
+  padding: 22px 30px;
 }
 .navigation-item:hover {
   background-color: #293449;
@@ -204,18 +265,17 @@ a {
 .material {
   background: url("../img/icon-1.svg") no-repeat #ffbf47;
 }
-.click {
-  background-color: #000;
-  opacity: 0.1;
+.categories-item-link {
+  background-color: rgba(255,255,255,0.1);
   text-align: center;
   text-transform: uppercase;
   text-decoration: none;
 }
-.click:hover {
-  opacity: 0.2;
+.categories-item-link:hover {
+  background-color: rgba(255,255,255,0.2);
 }
-.click:active {
-  opacity: 0.3;
+.categories-item-link:active {
+  background-color: rgba(255,255,255,0.3);
 }
 .tool {
   background: url("../img/icon-2.svg") no-repeat #3bbce3;
@@ -341,6 +401,16 @@ a {
   color: #ee3643;
   text-decoration: none;
 }
+.sort-list .active,
+.arrows .active {
+  opacity: 1;
+  color: #ee3643;
+  text-decoration: none;
+}
+.sort-list .active path,
+.arrows .active path {
+  fill: #ee3643;
+}
 .arrow path:hover {
   opacity: 1;
 }
@@ -449,13 +519,13 @@ a {
 .service-tab-nav a:active {
   color: #32425c;
 }
-.delive {
+.service-tab-delivery {
   background: url("../img/Layer_131.png") no-repeat;
 }
-.guarantee {
+.service-tab-guarantee {
   background: url("../img/Layer_130.png") no-repeat;
 }
-.credit {
+.service-tab-credit {
   background: url("../img/Layer_119.png") no-repeat;
 }
 .about h2 {
@@ -474,15 +544,15 @@ a {
 }
 /* catalog styles start */
 /* cart start */
-.good-in-cart {
+.cart-popup {
   border-top: 7px solid #ee3643;
   box-shadow: 0 20px 40px rgba(41,52,73,0.5);
 }
-.good-in-cart p {
+.cart-popup p {
   font-size: 30px;
   line-height: 30px;
 }
-.good-in-cart button {
+.cart-popup button {
   text-transform: uppercase;
 }
 .order-buy {
@@ -540,18 +610,17 @@ a {
 }
 /* catalog styles end */
 /* send form start */
-.send-form {
+.popup-write-us {
   border-top: 7px solid #ee3643;
   box-shadow: 0 20px 40px rgba(0,0,0,0.75);
 }
-.send-form p {
+.popup-write-us p {
   font-size: 18px;
 }
 .half-width input,
 .full-width input {
   border: 2px solid #dee3e4;
   font: 13px "pt-sans";
-  color: #a9a9a9;
 }
 .form-button {
   background-color: #f4f4f4;
